# nanojit

./: CMakeLists.txt  README.md
AVMPI/: float4Support.h
docs/: README.md  details.md  nanjit-opcodes.md  overview.md
nanojit/: Assembler.cpp  Assembler.h  LIR.cpp  LIR.h  LIRopcode.tbl  NativeX64.cpp  NativeX64.h
nanojitextra/: context.cpp  nanojitextra.cpp  nanojitextra.h
samples/: context.cpp  context.h  example1.cpp  spi.cpp
utils/nanojit-lirasm/lirasm/: lirasm.cpp
utils/nanojit-lirasm/lirasm/tests/: negnotq.in
